# W800Demo

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  ReadMe.md  appconfig.h  cpp.Kconfig  cpp.c  cpp.cpp  main.c  main.cmake  ntp.Kconfig  ntp.c  ntp.h  requirement.txt  wifinetwork.Kconfig  wifinetwork.c  wifinetwork.h
appstack/: MQTT.cpp  MQTT.hpp  MQTT_SMGS.cpp  MQTT_SMGS.h  SocketTcpClient.cpp  SocketTcpClient.hpp  app.cpp  app.h
cmake/: option.cmake  toolchain.cmake
cmake/sdk/: common.cmake
lib/MQTT/: MQTTFreeRTOS_LWIP.c  MQTTFreeRTOS_LWIP.h
lib/SSL/: APPSSL.c
rc/fs/: banner
wm_sdk_w800/demo/: wm_7816_demo.c  wm_avoid_copy_demo.c  wm_connect_net_demo.c  wm_demo.h  wm_dsp_demo.c  wm_i2s_demo.c  wm_iperf_auto_demo.c  wm_lcd_demo.c  wm_rtc_demo.c  wm_touchsensor_demo.c  wm_uart_demo.c
wm_sdk_w800/demo/console/: wm_demo_console.h
wm_sdk_w800/doc/: ChangeLog.txt  w800_apis.chm
wm_sdk_w800/include/: list.h  wm_bt_config.h  wm_config.h  wm_ram_config.h  wm_regs.h  wm_type_def.h  wm_wifi_config.h
wm_sdk_w800/include/app/: wm_http_client.h
wm_sdk_w800/include/bt/: wm_bt.h  wm_bt_api.h
wm_sdk_w800/include/driver/: wm_adc.h  wm_efuse.h  wm_flash_map.h  wm_internal_flash.h  wm_irq.h  wm_touchsensor.h  wm_uart.h  wm_watchdog.h
wm_sdk_w800/include/net/: wm_sockets2.0.3.h
wm_sdk_w800/include/platform/: wm_params.h
wm_sdk_w800/include/wifi/: litepoint.h
wm_sdk_w800/ld/w800/: gcc_csky.ld  gcc_csky_bt.ld
wm_sdk_w800/platform/arch/xt804/libc/: libc_port.c
wm_sdk_w800/platform/common/crypto/: wm_crypto_hard.c  wm_crypto_hard_mbed.c
wm_sdk_w800/platform/common/fwup/: wm_fwup.c
wm_sdk_w800/platform/common/params/: wm_param.c
wm_sdk_w800/platform/drivers/adc/: wm_adc.c  wm_polyfit.c
wm_sdk_w800/platform/drivers/dma/: wm_dma.c
wm_sdk_w800/platform/drivers/gpio/: wm_gpio.c  wm_gpio_afsel.c
wm_sdk_w800/platform/drivers/i2s/: wm_i2s.c
wm_sdk_w800/platform/drivers/internalflash/: wm_internal_fls.c
wm_sdk_w800/platform/drivers/lcd/: wm_lcd.c
wm_sdk_w800/platform/drivers/pmu/: wm_pmu.c
wm_sdk_w800/platform/drivers/timer/: wm_timer.c
wm_sdk_w800/platform/drivers/touchsensor/: wm_touchsensor.c
wm_sdk_w800/platform/drivers/uart/: wm_uart.c
wm_sdk_w800/platform/drivers/watchdog/: wm_watchdog.c
wm_sdk_w800/platform/inc/: tls_wireless.h
wm_sdk_w800/platform/sys/: wm_main.c
wm_sdk_w800/src/app/: Makefile
wm_sdk_w800/src/app/bleapp/: wm_ble_client_api_demo.h  wm_ble_client_api_multi_conn_demo.c  wm_ble_client_api_multi_conn_demo.h  wm_ble_client_util.c  wm_ble_gap.c  wm_ble_gap.h  wm_ble_mesh.h  wm_ble_mesh_gen_level_server.c  wm_ble_mesh_gen_level_server.h  wm_ble_mesh_gen_onoff_client.c  wm_ble_mesh_gen_onoff_client.h  wm_ble_mesh_gen_onoff_server.c  wm_ble_mesh_gen_onoff_server.h  wm_ble_mesh_health_server.c  wm_ble_mesh_health_server.h  wm_ble_mesh_node_demo.h  wm_ble_mesh_vnd_model.c  wm_ble_mesh_vnd_model.h  wm_ble_server_api_demo.c  wm_ble_server_api_demo.h  wm_ble_server_wifi_app.c  wm_ble_server_wifi_app.h  wm_ble_server_wifi_prof.c  wm_ble_server_wifi_prof.h  wm_ble_uart_if.c  wm_ble_uart_if.h  wm_bt_util.c  wm_bt_util.h
wm_sdk_w800/src/app/btapp/: wm_audio_sink.c  wm_audio_sink.h  wm_ble_client.c  wm_ble_client.h  wm_ble_client_api_demo.c  wm_ble_client_api_multi_conn_demo.c  wm_ble_client_demo.c  wm_ble_dm_api.h  wm_ble_gap.c  wm_ble_gap.h  wm_ble_server.c  wm_ble_server.h  wm_ble_server_api_demo.c  wm_ble_server_demo_prof.c  wm_ble_server_wifi_app.c  wm_ble_server_wifi_prof.c  wm_ble_server_wifi_prof.h  wm_ble_uart_if.c  wm_ble_uart_if.h  wm_bt_spp_client.c  wm_bt_spp_client.h  wm_bt_spp_server.c  wm_bt_spp_server.h  wm_bt_util.c  wm_bt_util.h  wm_hfp_hsp_client.c
wm_sdk_w800/src/app/dhcpserver/: dhcp_server.c
wm_sdk_w800/src/app/factorycmd/: factory_atcmd.c
wm_sdk_w800/src/app/httpclient/: HTTPClient.c  HTTPClientWrapper.c  wm_httpclient_task.c
wm_sdk_w800/src/app/iperf/: iperf_api.c  iperf_error.c  wm_perf.c
wm_sdk_w800/src/app/libwebsockets-2.1-stable/: private-libwebsockets.h
wm_sdk_w800/src/app/mbedtls/include/mbedtls/: config.h
wm_sdk_w800/src/app/oneshotconfig/: wm_oneshot_lsd.c  wm_wifi_oneshot.c
wm_sdk_w800/src/app/ota/: wm_http_fwup.c  wm_socket_fwup.c
wm_sdk_w800/src/app/ping/: ping.c
wm_sdk_w800/src/app/web/: fs.c  httpd.c  web.c
wm_sdk_w800/src/app/web/fs_ap_config/: basic.html
wm_sdk_w800/src/app/wm_atcmd/: wm_cmdp_hostif.c  wm_cmdp_hostif.h  wm_cmdp_hostif_gcc.h  wm_uart_task.c  wm_uart_task.h
wm_sdk_w800/src/bt/: astyle.bat
wm_sdk_w800/src/bt/blehost/nimble/host/mesh/src/: wm_ble_mesh_store.c  wm_ble_mesh_store.h
wm_sdk_w800/src/bt/blehost/nimble/host/store/config/include/store/config/: wm_bt_storage.h
wm_sdk_w800/src/bt/blehost/nimble/host/store/config/src/: wm_bt_storage.c
wm_sdk_w800/src/bt/host/btif/src/: btif_gatt_dm.c  btif_spp.c
wm_sdk_w800/src/bt/host/gki/wm/: data_types.h  gki_int.h  gki_wm.c
wm_sdk_w800/src/bt/host/include/: bt_gatt_dm.h
wm_sdk_w800/src/bt/host/main/: wm_bt_storage.c  wm_bt_storage.h
wm_sdk_w800/src/bt/host/stack/include/: bt_buffer_q.h
wm_sdk_w800/src/network/lwip2.0.3/: sys_arch.c
wm_sdk_w800/src/network/lwip2.0.3/core/: tcp.c
wm_sdk_w800/src/network/lwip2.0.3/core/ipv4/: dhcp.c
wm_sdk_w800/src/network/lwip2.0.3/include/lwip/: lwipopts.h  opt.h
wm_sdk_w800/src/network/lwip2.0.3/netif/: ethernetif.c
wm_sdk_w800/src/os/rtos/: wm_osal_rtos.c
wm_sdk_w800/src/os/rtos/include/: FreeRTOS.h  FreeRTOSConfig.h  croutine.h  mpu_prototypes.h  portable.h  portmacro.h  rtoslist.h  semphr.h
wm_sdk_w800/src/os/rtos/ports/xt804/: port.c
wm_sdk_w800/src/os/rtos/source/: event_groups.c  heap_2.c  heap_3.c  list.c  queue.c  stream_buffer.c  tasks.c  timers.c
wm_sdk_w800/tools/w800/: .config.old  README.md  inc.mk  wm_getver  wm_tool  wm_tool.c
wm_sdk_w800/tools/w800/projects/SDK_Project/project/CDK_WS/W800_SDK/: W800_SDK.cdkproj
wm_sdk_w800/tools/w800/utilities/: aft_build_project.sh  cdk_aft_build.sh
